--- a/index.html
+++ b/index.html
@@ -16,19 +16,27 @@
 
 <body>
     <header>
-        <nav class="nav-bar">
+        <!-- navbar start -->
+        <nav class="nav-bar container">
             <div class="nav-logo">
                 <h1 class="logo-title">G3 Architects</h1>
             </div>
             <div class="nav-item">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact Us</li>
-                    <li>Login</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact Us</a></li>
+                    <li><a href="">Login</a></li>
                 </ul>
             </div>
         </nav>
+        <!-- banner start -->
+        <div class="banner container">
+            <h2 class="banner-title">Brand New <br>Group of Architects</h2>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+            <img src="images/banner.png" alt="banner">
+        </div>
     </header>
 </body>
 
