--- a/index.html
+++ b/index.html
@@ -33,11 +33,118 @@
         <!-- banner start -->
         <div class="banner container">
             <h2 class="banner-title">Brand New <br>Group of Architects</h2>
-            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</p>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't
+                look even</p>
             <button class="btn-primary">Explore More</button>
             <img src="images/banner.png" alt="banner">
         </div>
     </header>
+    <main>
+        <!-- quick-list section -->
+        <section class="container quick-list">
+            <div class="quick-list-item">
+                <div class="quick-list-img">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+                <div class="quick-list-info">
+                    <h2 class="quick-list-title"><span class="span1">Quick list</span> <span class="span2">of
+                            Our</span><br>Features</h2>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, <br>
+                        but the majority have suffered alteration in some form, by injected <br> humour, or randomised
+                        words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            </div>
+        </section>
+        <!-- features section -->
+        <section class="feature container">
+            <div class="feature-item">
+                <div class="feature-info">
+                    <h3 class="section-title">Features you will <br>love & enjoy</h3>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
+                        the <br> majority have suffered alteration in some form, by injected humour, or <br> randomised
+                        words which don't look even</p>
+                    <div class="info-deatils">
+                        <h4 class="info-title">Dexktop & Mobile Version</h4>
+                        <p class="info-description">There are many variations of passages of Lorem Ipsum available, <br>
+                            but the majority have suffered alteration in some form, by <br> injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="info-deatils">
+                        <h4 class="info-title">Dexktop & Mobile Version</h4>
+                        <p class="info-description">There are many variations of passages of Lorem Ipsum available, <br>
+                            but the majority have suffered alteration in some form, by <br> injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="info-deatils">
+                        <h4 class="info-title">Dexktop & Mobile Version</h4>
+                        <p class="info-description">There are many variations of passages of Lorem Ipsum available, <br>
+                            but the majority have suffered alteration in some form, by <br> injected humour, or
+                            randomised...........</p>
+                    </div>
+                    <div class="info-deatils">
+                        <h4 class="info-title">Dexktop & Mobile Version</h4>
+                        <p class="info-description">There are many variations of passages of Lorem Ipsum
+                            available,<br>but the majority have suffered alteration in some form, by <br> injected
+                            humour, or randomised...........</p>
+                    </div>
+                </div>
+                <div class="feature-img">
+                    <img src="images/architect.png" alt="">
+
+                </div>
+            </div>
+            <div class="experiance">
+                <p>10+Year <br> <span>Experience</span></p>
+            </div>
+        </section>
+        <!-- fact section start -->
+        <section class="container fact">
+            <h2 class="section-title">Some Facts</h2>
+            <p class="section-description">There are many variations of passages of Lorem Ipsum available, but <br>the
+                majority have suffered alteration.</p>
+            <div class="fact-item">
+                <div class="facts">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="facts-title">54</h3>
+                    <p class="fact-description">Awards Winnings</p>
+                </div>
+                <div class="facts">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="facts-title">5458</h3>
+                    <p class="fact-description">Project Finished</p>
+                </div>
+                <div class="facts">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="facts-title">590</h3>
+                    <p class="fact-description">Clients Worked</p>
+                </div>
+                <div class="facts">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="facts-title">22578</h3>
+                    <p class="fact-description">Email Send</p>
+                </div>
+            </div>
+        </section>
+        <!-- sponser section start -->
+        <section class="container sponser">
+            <div class="section-info">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
+            </div>
+            <div class="sponser-img">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
