--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
         </section>
         <!-- sponser section start -->
-        <section class="container sponser">
+        <section class="container sponser ">
             <div class="section-info">
                 <h3 class="section-title">Our Sponspors</h3>
                 <p class="section-description">There are many variations of passages of Lorem Ipsum available, but <br>the majority have suffered alteration.</p>
@@ -144,7 +144,20 @@
                 <img src="images/sponsors/telerama.png" alt="">
             </div>
         </section>
+        <!-- contect section start -->
+        <section class="container contect ">
+            <h3 class="section-title">Let’s Message</h3>
+            <form action="">
+                <input type="text" placeholder="your name">
+                <input type="email" placeholder="your email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="message here"></textarea>
+            </form>
+        </section>
     </main>
+    <!-- footer section start -->
+    <footer class="container">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 
 </html>
