footer sectionre responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </header>
     <main>
         <!-- quick-list section -->
-        <section class="container quick-list">
+        <section class="container quick-list ">
             <div class="quick-list-item">
                 <div class="quick-list-img">
                     <img src="images/team1.png" alt="">
@@ -61,7 +61,7 @@
             </div>
         </section>
         <!-- features section -->
-        <section class="feature container">
+        <section class="feature container ">
             <div class="feature-item">
                 <div class="feature-info">
                     <h3 class="section-title">Features you will <br>love & enjoy</h3>
@@ -103,7 +103,7 @@
             </div>
         </section>
         <!-- fact section start -->
-        <section class="container fact">
+        <section class="container fact ">
             <h2 class="section-title">Some Facts</h2>
             <p class="section-description">There are many variations of passages of Lorem Ipsum available, but <br>the
                 majority have suffered alteration.</p>
@@ -155,7 +155,7 @@
         </section>
     </main>
     <!-- footer section start -->
-    <footer class="container">
+    <footer>
         <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
